<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TravelerProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/travelerHeading"
        android:text="@string/travelerheading"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/travelersub1"
        android:text="@string/travelersubheading1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/sideTextMargin"
        android:layout_marginEnd="@dimen/sideTextMargin"
        app:layout_constraintTop_toBottomOf="@+id/travelerHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startjourneybot"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/sideButtonMargin"
        android:layout_marginEnd="@dimen/sideButtonMargin"
        android:text="Start Journey"
        android:textSize="22sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/travelersub1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/bluebutton"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/travelersub2"
        android:text="@string/travelersubheading2"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/sideTextMargin"
        android:layout_marginEnd="@dimen/sideTextMargin"
        app:layout_constraintTop_toBottomOf="@+id/startjourneybot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/travelersub3"
        android:text="@string/travelersubheading3"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/sideTextMargin"
        android:layout_marginEnd="@dimen/sideTextMargin"
        app:layout_constraintTop_toBottomOf="@+id/travelersub2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>