<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageButton
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:background="@drawable/welcomebutton"
        android:id="@+id/backToWelcome"
        android:contentDescription="@string/BackBtnDescription"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        app:layout_constraintStart_toEndOf="@+id/backToWelcome"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/sideTextMargin"
        android:text="@string/LoginText"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/loginHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backToWelcome"
        android:layout_marginTop="32dp"
        android:layout_marginStart="@dimen/sideTextMargin"
        android:layout_marginEnd="@dimen/sideTextMargin"
        android:gravity="center_horizontal"
        android:text="@string/LoginHeading"
        android:textSize="34dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneLabel"
        app:layout_constraintTop_toBottomOf="@id/loginHeading"
        android:text="@string/PhoneNumber"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="64dp"
        android:layout_marginStart="@dimen/sideTextMargin"
        android:layout_marginEnd="@dimen/sideTextMargin"
        android:textColor="@color/black"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/phoneLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/sideTextMargin"
        android:layout_marginEnd="@dimen/sideTextMargin"
        android:layout_marginTop="4dp"
        app:startIconDrawable="@drawable/baseline_contact_phone_24"
        app:prefixText="+91"
        app:boxStrokeColor="@color/lighBlue"
        app:boxStrokeErrorColor="@color/errorRed"
        app:helperText="required*"
        app:helperTextTextColor="@color/errorRed"
        app:counterEnabled="true"
        app:counterMaxLength="10"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:maxLength="10"
            android:inputType="number"
            android:textSize="20dp"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/restTime"
        android:text="00:00"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/generateOtpButton"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberInput"
        app:layout_constraintBottom_toTopOf="@id/otpInput"
        android:layout_marginRight="8dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/generateOtpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Generate OTP"
        android:textSize="12sp"
        android:layout_marginEnd="@dimen/sideTextMargin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberInput"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/otpLabel"
        android:text="@string/otpLabel"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/sideTextMargin"
        android:layout_marginEnd="@dimen/sideTextMargin"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberInput"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:gravity="left"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/otpLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/sideTextMargin"
        android:layout_marginEnd="@dimen/sideTextMargin"
        android:layout_marginTop="4dp"
        app:boxStrokeColor="@color/lighBlue"
        app:helperText="required*"
        app:helperTextTextColor="@color/errorRed"
        app:counterMaxLength="10"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:maxLength="6"
            android:inputType="number"
            android:textSize="20dp"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/verifyOtpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Verify OTP"
        android:textSize="22sp"
        android:gravity="center_horizontal"
        android:layout_marginStart="@dimen/sideButtonMargin"
        android:layout_marginEnd="@dimen/sideButtonMargin"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/otpInput"
        android:backgroundTint="@color/bluebutton"
        />









</androidx.constraintlayout.widget.ConstraintLayout>